--- a/README.Rmd
+++ b/README.Rmd
@@ -26,6 +26,7 @@ You can install brapiui from github with:
 
 ```{r gh-installation, eval = FALSE}
 # install.packages("devtools")
+
 devtools::install_github("c5sire/brapiui")
 ```
 
@@ -35,7 +36,7 @@ Note: You also need to install the brapi package.
 
 ```{r brapi-installation, eval = FALSE}
 # install.packages("devtools")
-devtools::install_github("CIP-RIU/brapiui")
+devtools::install_github("CIP-RIU/brapi")
 ```
 
 
